update odsss from hii

--- a/wtp/templates/api/deployment.yaml
+++ b/wtp/templates/api/deployment.yaml
@@ -70,3 +70,8 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers:
+          - 8.8.8.8
+          - 1.1.1.1  
