--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -178,7 +178,7 @@ frontend:
   image:
     repository: dhiacrdev.azurecr.io/wrd/wrd-mike-mine
     pullPolicy: IfNotPresent
-    tag: "20240612.2-dev"
+    tag: "20240708.4-dev"
   containerPorts: 
     - name: http
       containerPort: 80
@@ -306,7 +306,7 @@ pyapi:
   image:
     repository: dhiacrdev.azurecr.io/wrd/wrdmainservices
     pullPolicy: IfNotPresent
-    tag: "20240611.2-dev"
+    tag: "20240705.3-dev"
   envs:
   service:
       type: ClusterIP
@@ -370,6 +370,7 @@ geoserver:
     nginx.ingress.kubernetes.io/session-cookie-max-age: "5"
   volume:
     hostPath: /water-status-data/geoserver
+    rasterHostPath: /water-status-data/data-geoserver
 
 xample:
   replicaCount: 1
