--- a/wtp/templates/dsapi/deployment.yaml
+++ b/wtp/templates/dsapi/deployment.yaml
@@ -44,3 +44,8 @@ spec:
           env:
             {{- toYaml . | nindent 12 }}
           {{- end }}          
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers:
+          - 8.8.8.8
+          - 1.1.1.1            
