--- a/wtp/templates/api/deployment.yaml
+++ b/wtp/templates/api/deployment.yaml
@@ -55,6 +55,11 @@ spec:
             {{- toYaml . | nindent 12 }}
           {{- end }}
       {{- with .Values.wtpapi.volumes }}
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers:
+          - 8.8.8.8
+          - 1.1.1.1      
       volumes:
         {{- toYaml . | nindent 8 }}
       {{- end }}
