--- a/wtp/templates/geoserver/geoserver-raster-pv.yaml
+++ b/wtp/templates/geoserver/geoserver-raster-pv.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ include "wtp.name" . }}-geoserver-pv
+  name: {{ include "wtp.name" . }}-geoserver-raster-pv
   labels:
     helm.sh/chart: {{ include "wtp.chart" . }}
-    app.kubernetes.io/name: {{ include "wtp.name" . }}-pv
+    app.kubernetes.io/name: {{ include "wtp.name" . }}-geoserver-raster-pv
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service }}  
@@ -14,8 +14,8 @@ spec:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
-  {{- if .Values.geoserver.volume.hostPath }}
+  {{- if .Values.geoserver.volume.rasterHostPath }}
   hostPath:
-    path: {{ .Values.geoserver.volume.hostPath }}
+    path: {{ .Values.geoserver.volume.rasterHostPath }}
     type: DirectoryOrCreate
   {{- end }}
