--- a/wtp/templates/wrdmainsvc-py/deployment.yaml
+++ b/wtp/templates/wrdmainsvc-py/deployment.yaml
@@ -47,7 +47,12 @@ spec:
           volumeMounts:
             - mountPath: "/code/app/config/data"
               name: pyapi-volume
+      dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers:
+          - 8.8.8.8
+          - 1.1.1.1   
       volumes:
         - name: pyapi-volume
           persistentVolumeClaim:
-            claimName: {{ include "wtp.name" . }}-pyapi-pv-claim                        
+            claimName: {{ include "wtp.name" . }}-pyapi-pv-claim              
