--- a/wtp/values.yaml
+++ b/wtp/values.yaml
@@ -37,7 +37,7 @@ wtpapi:
   containerPort: 80
   envs:
     - name: ASPNETCORE_ENVIRONMENT
-      value: "Development"
+      value: "Production"
     - name: ConnectionStrings__Default
       value: "Host=dhiwtp-db-svc;Port=5432;Username=postgres;Password=1234;Database=wrddevdb;Include Error Detail=true;"
     - name: App__CorsOrigins
